fix footer overflowing on user profile

--- a/static/styles/profile.css
+++ b/static/styles/profile.css
@@ -225,6 +225,6 @@
     }
 
     main {
-        padding: 0 1.6em !important;
+        padding: 0 1.6em 6em 1.6em !important;
     }
 }
